fix alignment for the header in the friendslist

--- a/client/src/components/common/iconButton/IconButton.css
+++ b/client/src/components/common/iconButton/IconButton.css
@@ -1,4 +1,7 @@
 .icon-button{
     color: var(--grey-color-50) !important;
-    padding-bottom: 8px;
+}
+
+.icon-button i::before{
+    line-height: inherit !important;
 }
